--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="project/css/style.css" type="text/css">
     <link rel="stylesheet" href="css/color.css" type="text/css">
     <link rel="stylesheet" href="css/colors/orange.css" type="text/css">
     <link rel="stylesheet" href="css/colors/gradient-1.css" type="text/css">
