--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <!-- CSS Files
     ================================================== -->
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/animate.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="project/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="project/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="project/css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="project/css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/color.css" type="text/css">
-    <link rel="stylesheet" href="css/colors/orange.css" type="text/css">
-    <link rel="stylesheet" href="css/colors/gradient-1.css" type="text/css">
+    <link rel="stylesheet" href="project/css/color.css" type="text/css">
+    <link rel="stylesheet" href="project/css/colors/orange.css" type="text/css">
+    <link rel="stylesheet" href="project/css/colors/gradient-1.css" type="text/css">
 
     <!-- background -->
     <link rel="stylesheet" href="css/bg.css" type="text/css">
