--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                                 <li><a href="#section-archive">Архив</a></li>
                                 <li><a href="#section-contacts">Контакты</a></li>
                                 <li><a href="..\ws2024eng\index.html">Форум</a></li>
-                                <!--<li><a href="#section-fun-facts">Партнеры</a></li> -->
                             </ul>
                         </nav>
 
@@ -2374,9 +2373,9 @@
         <div class="preloader1"></div>
     </div>
 
-    <div id="floating-icon" class="sm-hide">
+<!--     <div id="floating-icon" class="sm-hide">
         <a href="#section-contacts" class="scroll-to bg-orange"><i class="fa fa-pencil"></i> Участие</a>
-    </div>
+    </div> -->
 
     </div>
 
