--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                         <nav>
                             <ul id="mainmenu">
                                 <li><a class="active" href="#top">Главная</a></li>
-                                <li><a href="#section-about">О мероприятии</a></li>
-                                <li><a href="#section-schedules">Программа</a></li>
+                                <li><a href="#section-about">О проекте</a></li>
                                 <li><a href="#section-speakers">Спикеры</a></li>
                                 <li><a href="#section-archive">Архив</a></li>
                                 <li><a href="#section-contacts">Контакты</a></li>
@@ -93,16 +92,13 @@
                                 <h3>«Актуальные вопросы высшего образования и языкового обучения<br />в эпоху
                                     цифровизации» <br>(с международным участием)</h3>
                                 <div class="spacer-single"></div>
-                                <div class="subtitle s2">
-                                    <h2><span><i class="fa fa-calendar-o" color="white"></i>c 24 января по 29 февраля
-                                            2024г.</span></h2>
-                                </div>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
+				<div class="spacer-single"></div>
+				<div class="spacer-single"></div>
+				<div class="spacer-single"></div>
                                 <div class="clearfix"></div>
-                                <a href="https://forms.gle/hfyeWHMD8dN8XjbE7" class="btn-custom scroll-to"
-                                    target="_blank">Регистрация</a>
                             </div>
                         </div>
                     </div>
@@ -117,7 +113,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h2 class="wow fadeInUp">Цель мероприятия</h2>
-                            <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
+                            <div class="small-border wow fadeInUp" data-wow-delay=".2s">Линия</div>
                         </div>
 
                         <div class="col-md-12 text-center wow fadeInUp">
