--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h2 class="wow fadeInUp">Цель мероприятия</h2>
-                        </div>
+                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#ff4f00">Линия</div>
+			</div>
 
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
