--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h2 class="wow fadeInUp">Цель мероприятия</h2>
-                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#ff4f00">Линия</div>
+                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#5D001E"></div>
 			</div>
 
                         <div class="col-md-12 text-center wow fadeInUp">
