--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/bg.css" type="text/css">
 </head>
 
-<body id="homepage">
+<body id="homepage" style="background:#5D001E">
 
     <div id="wrapper">
 
