--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/bg.css" type="text/css">
 </head>
 
-<body id="homepage" style="background:#5D001E">
+<body id="homepage" style="background:#E3E2DF">
 
     <div id="wrapper">
 
@@ -105,7 +105,7 @@
             <!-- section close -->
 
             <!-- section begin О КОНФЕРЕНЦИИ -->
-            <section id="section-about">
+            <section id="section-about" style="background:#E3E2DF">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
