--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp" color="#DA0546">Цель мероприятия</h2>
+                            <h2 class="wow fadeInUp" style="background:#DA0546">Цель мероприятия</h2>
                         <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#5D001E"></div>
 			</div>
 
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
-                            <h4 color="#211C18">Главной целью мероприятия является создание площадки между организациями, экспертами в
+                            <h4 color="#DA0546">Главной целью мероприятия является создание площадки между организациями, экспертами в
                                 области языкового образования и профессионалами-практиками Удмуртии и других регионов
                                 РФ, а также зарубежных стран для обмена опытом, научными и методическими достижениями,
                                 развитие научно-профессионального сотрудничества в области цифровой дидактики,
