--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
-                            <h4><font color="#DA0546">Главной целью мероприятия является создание площадки между организациями, экспертами в
+                            <h4><font color="#211C18">Главной целью мероприятия является создание площадки между организациями, экспертами в
                                 области языкового образования и профессионалами-практиками Удмуртии и других регионов
                                 РФ, а также зарубежных стран для обмена опытом, научными и методическими достижениями,
                                 развитие научно-профессионального сотрудничества в области цифровой дидактики,
