--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="wrapper">
 
         <!-- header begin -->
-        <header bgcolor="red">
+        <header style="background:#F9ECEF">
 
             <div class="container">
                 <div class="row">
