--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>VII Зимняя школа</title>
+    <title>Проект_проект</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="VII Зимняя школа" />
-    <meta property="og:url" content="https://distant.istu.ru/ws2024/" />
+    <meta property="og:title" content="Проект_проект" />
+<!--     <meta property="og:url" content="https://distant.istu.ru/ws2024/" /> -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="VII Зимняя школа" />
+    <meta property="og:site_name" content="Проект_проект" />
     <meta property="og:image" content="images/background/bg_source.png" />
 
     <!--[if lt IE 9]>
