--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
                             <ul id="mainmenu">
                                 <li><a class="active" href="#top">Главная</a></li>
                                 <li><a href="#section-about">О проекте</a></li>
-                                <li><a href="#section-speakers">Спикеры</a></li>
-                                <li><a href="#section-archive">Архив</a></li>
-                                <li><a href="#section-contacts">Контакты</a></li>
-                                <li><a href="..\ws2024eng\index.html">Форум</a></li>
+                                <li><a href="#section-speakers">Проект</a></li>
+                                <li><a href="#section-contacts">Команда проекта</a></li>
+                                <li><a href="https://vk.com/screen_istu">Контакты</a></li>
                             </ul>
                         </nav>
 
@@ -2341,7 +2340,7 @@
             <div class="row">
                 <div class="col-md-6 sm-text-center sm-mb10">
                     <div class="mt10">
-                        <h3>&copy; ИжГТУ - Институт образовательных технологий</h3>
+                        <h3><font color="#DA0546">&copy; Студенческий медиацентр ИжГТУ имени М.Т. Калашникова Screen</font></h3>
                     </div>
                 </div>
 
