--- a/index.html
+++ b/index.html
@@ -2346,10 +2346,8 @@
 
                 <div class="col-md-6 text-right sm-text-center">
                     <div class="social-icons">
-                        <a href="https://vk.com/istu_do" target="_blank"><i class="fa fa-vk fa-lg"></i></a>
-                        <a href="https://www.youtube.com/channel/UC7cq2QI_QOPItIST7QuuBhQ" target="_blank"><i
-                                class="fa fa-youtube fa-lg"></i></a>
-                        <a href="http://distant.istu.ru/" target="_blank"><i class="fa fa-globe fa-lg"></i></a>
+                        <a href="https://vk.com/screen_istu" target="_blank"><i class="fa fa-vk fa-lg"></i></a>
+                        <a href="https://vk.com/away.php?to=https%3A%2F%2Ft.me%2Fscreenge&cc_key=" target="_blank"><i class="fa fa-globe fa-lg"></i></a>
                     </div>
                 </div>
             </div>
