--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <!-- section close -->
 
     <!-- section begin СПИКЕРЫ -->
-    <section id="section-speakers">
+    <section id="section-speakers"  style="background:#E3E2DF">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
