--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
                             <div class="row">
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
-                                <h1 class="big">VII Всероссийская зимняя <br> школа педагогического <br> мастерства</h1>
+                                <h1 class="big">          23 февраля<br>          наши защитники <br>          отечества</h1>
                                 <div class="spacer-single"></div>
 
-                                <h3>«Актуальные вопросы высшего образования и языкового обучения<br />в эпоху
-                                    цифровизации» <br>(с международным участием)</h3>
+                                <h3><br></h3>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="clearfix"></div>
