--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                             <div class="row">
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
-                                <h1 class="big">&ensp;&ensp;23 ФЕВРАЛЯ<br>&ensp;&ensp;ДЕНЬ ЗАЩИТНИКА<br>&ensp;&ensp;ОТЕЧЕСТВА</h1>
+                                <h1 class="big">&ensp;&ensp;&ensp;23 ФЕВРАЛЯ</h1>
+				<h2>&ensp;&ensp;&ensp;ДЕНЬ ЗАЩИТНИКА<br>&ensp;&ensp;&ensp;ОТЕЧЕСТВА</h2>    
                                 <div class="spacer-single"></div>
 
                                 <h3><br></h3>
