--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--     <meta property="og:url" content="https://distant.istu.ru/ws2024/" /> -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Проект_проект" />
-    <meta property="og:image" content="images/background/bg_source.png" />
+    <meta property="og:image" content="images/background/1.png" />
 
     <!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
