--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="row">
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
-                                <h1 class="big">&ensp;&ensp;23 ФЕВРАЛЯ<br><br><br>&ensp;&ensp;день защитника<br>&ensp;отечества</h1> 
+                                <h1 class="big">&ensp;&ensp;23 ФЕВРАЛЯ<br><br>&ensp;&ensp;день защитника<br>&ensp;&ensp;отечества</h1> 
                                 <div class="spacer-single"></div>
 
                                 <h3><br></h3>
