--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
                             <div class="row">
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
-                                <h1 class="big">&ensp;&ensp;23 ФЕВРАЛЯ<br><br>&ensp;&ensp;день защитника<br>&ensp;&ensp;отечества</h1> 
+                                <h1 class="big">&ensp;&ensp;23 ФЕВРАЛЯ<br>&ensp;&ensp;день защитника<br>&ensp;&ensp;отечества</h1> 
                                 <div class="spacer-single"></div>
-
-                                <h3><br></h3>
+                                <h3>В этот не должны быть забыты те,<br>кто выбрал служить родине</h3>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="clearfix"></div>
