--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="row">
                                 <div class="spacer-half sm-hide"></div>
                                 <div class="spacer-double sm-hide"></div>
-                                <h1 class="big">&ensp;23 ФЕВРАЛЯ<br>&ensp;день защитника<br>&ensp;отечества</h1> 
+                                <h1 class="big">23 ФЕВРАЛЯ<br>день защитника<br>отечества</h1> 
                                 <div class="spacer-single"></div>
                                 <h3>&ensp;Посвящается всем тем,<br>&ensp;кто выбрал защищать нашу родину</h3>
                                 <div class="spacer-single"></div>
