--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Проект_проект</title>
+    <title>23 февраля</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Проект_проект" />
+    <meta property="og:title" content="23" />
 <!--     <meta property="og:url" content="https://distant.istu.ru/ws2024/" /> -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Проект_проект" />
