--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/color.css" type="text/css">
     <link rel="stylesheet" href="css/colors/orange.css" type="text/css">
     <link rel="stylesheet" href="css/colors/gradient-1.css" type="text/css">
-
+    <link rel=”icon” href="images/иконка.png" type=”image/x-icon”>
     <!-- background -->
     <link rel="stylesheet" href="css/bg.css" type="text/css">
 </head>
@@ -44,7 +44,6 @@
                         <!-- logo begin -->
                         <div id="logo">
                             <a href="index.html">
-                                <img class="mt5 logo" src="images/logo-light.png" alt="" width="60px">
                                 <img class="mt5 logo-2" src="images/logo-dark.png" alt="" width="60px">
                             </a>
                         </div>
