--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/bg.css" type="text/css">
 </head>
 
-<body id="homepage" style="background:#E3E2DF">
+<body id="homepage" style="background:#F7F6E1">
 
     <div id="wrapper">
 
@@ -99,22 +99,17 @@
             <!-- section close -->
 
             <!-- section begin О КОНФЕРЕНЦИИ -->
-            <section id="section-about" style="background:#E3E2DF">
+            <section id="section-about" style="background:#F7F6E1">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp"> <font color="#DA0546">Цель мероприятия</font></h2>
-                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#5D001E"></div>
+                            <h2 class="wow fadeInUp"> <font color="#001B0D">О проекте</font></h2>
+                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
 			</div>
 
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
-                            <h4><font color="#211C18">Главной целью мероприятия является создание площадки между организациями, экспертами в
-                                области языкового образования и профессионалами-практиками Удмуртии и других регионов
-                                РФ, а также зарубежных стран для обмена опытом, научными и методическими достижениями,
-                                развитие научно-профессионального сотрудничества в области цифровой дидактики,
-                                лингводидактики и иноязычного образования как неотъемлемого компонента профессионального
-                                образования в условиях новых реалий.</font> </h4>
+                            <h4><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь высокопарные слова и устраивать всевозможные развлечения. А что уж там говорить о патриотическом воспитании подрастающего поколения. К сожалению, в учреждениях о патриотизме говорят всего пару слов и то ради формальности. Так и растут дети, не понимая ничего о патриотизме и отмечая 23 февраля, как очередную дату календаря.</font> </h4>
                             </p>
                             <div class="spacer-double"></div>
                         </div>
@@ -797,7 +792,7 @@
     <!-- section close -->
 
     <!-- section begin ЗАПИСЬ-->
-    <section id="section-contacts">
+    <section id="section-contacts" style="background:#F7F6E1">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
