--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/bg.css" type="text/css">
 </head>
 
-<body id="homepage" style="background:#F7F6E1">
+<body id="homepage" style="background:#FFFFFF">
 
     <div id="wrapper">
 
@@ -44,7 +44,7 @@
                         <!-- logo begin -->
                         <div id="logo">
                             <a href="index.html">
-                                <img class="mt5 logo-2" src="images/logo-dark.png" alt="" width="50px">
+                                <img class="mt5 logo-2" src="images/logo-dark.png" alt="" width="45px">
                             </a>
                         </div>
                         <!-- logo close -->
@@ -99,7 +99,7 @@
             <!-- section close -->
 
             <!-- section begin О КОНФЕРЕНЦИИ -->
-            <section id="section-about" style="background:#F7F6E1">
+            <section id="section-about" style="background:#FFFFFF">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
@@ -140,7 +140,7 @@
             <!-- section close -->
 
     <!-- section begin СПИКЕРЫ -->
-    <section id="section-speakers"  style="background:#E3E2DF">
+    <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -748,51 +748,8 @@
     </section>
     <!-- section close -->
 
-    <!-- section begin ПАРТНЕРЫ-->
-    <!-- <section id="section-fun-facts" class="no-top no-bottom text-light" data-stellar-background-ratio=".2">
-                <div class="overlay-gradient pt80 pb80">
-                    <div class="container">
-
-                        <div class="row">
-                            <div class="col-md-12 text-center">
-
-                                <h2 class="wow fadeInUp">Партнеры</h2>
-                                <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
-                            </div>
-
-                            <div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
-                                <div class="de_count sm-mb30">
-                                    <img src="images/logo/tplus.png" alt="">                                    
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
-                                <div class="de_count sm-mb30">
-                                    <img src="images/logo/tizh.png" alt="">                                    
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
-                                <div class="de_count sm-mb30">
-                                    <img src="images/logo/inotech.png" alt="">                                    
-                                </div>
-                            </div>
-				
-			<div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
-                                <div class="de_count sm-mb30">
-                                    <img src="images/logo/izhavia.png" alt="">                                    
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-        -->
-    <!-- section close -->
-
     <!-- section begin ЗАПИСЬ-->
-    <section id="section-contacts" style="background:#F7F6E1">
+    <section id="section-contacts" style="background:#FFFFFF">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
