--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <h2 class="wow fadeInUp">Регистрация на мероприятие</h2>
-                    <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
+                    <h2 class="wow fadeInUp"><font color="#001B0D">Командна проекта</font></h2>
+                    <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#A7131E"></div>
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <p class="lead wow fadeInUp">
