--- a/index.html
+++ b/index.html
@@ -282,9 +282,10 @@
                     <div class="profile_pic text-center">
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
-                                Title="Редактор проекта">
+                                Title="Редактор проекта
+				    дизайнер">
                                 <span class="overlay-v">
-                                    <span>Редактор проекта
+                                    <span>Редактор проекта<br>дизайнер
                                 </span>
                             </a>
                             <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
@@ -292,6 +293,8 @@
 
                         <h3>Дарья Масленникова</h3>
                     </div>
+		</div>
+		<div class="col-md-3 mb30">    
 		       <div class="profile_pic text-center">
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
@@ -308,6 +311,8 @@
                         <h3>Данил Сурнин</h3>
                         <span class="subtitle"></span>
                     </div>
+			</div>
+			  <div class="col-md-3 mb30">
 		       <div class="profile_pic text-center">
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
@@ -321,6 +326,8 @@
 
                         <h3>Анастасия Ложкина</h3>
                     </div>
+				  </div>
+		<div class="col-md-3 mb30">
 		        <div class="profile_pic text-center">
                         <figure class="picframe mb30">
                             <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
