--- a/index.html
+++ b/index.html
@@ -285,13 +285,14 @@
                                 Title="Редактор проекта
 дизайнер">
                                 <span class="overlay-v">
-                                    <span>Редактор проекта<br>дизайнер
+                                    <span>Редактор проекта<br>
+дизайнер
                                 </span>
                             </a>
                             <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3>Дарья Масленникова</h3>
+                        <h3><font color="#001B0D">Дарья Масленникова</font></h3>
                     </div>
 		</div>
 		<div class="col-md-3 mb30">    
@@ -302,13 +303,15 @@
 верстальщик лендинга
 копирайтеп">
                                 <span class="overlay-v">
-                                    <span>Продюсер проекта<br>верстальщик лендинга<br>копирайтер 
+                                    <span>Продюсер проекта<br>
+верстальщик лендинга<br>
+копирайтер 
                                 </span>
                             </a>
                             <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3>Данил Сурнин</h3>
+                        <h3><font color="#001B0D">Данил Сурнин</font></h3>
                         <span class="subtitle"></span>
                     </div>
 			</div>
@@ -324,7 +327,7 @@
                             <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3>Анастасия Ложкина</h3>
+                        <h3><font color="#001B0D">Анастасия Ложкина</font></h3>
                     </div>
 				  </div>
 		<div class="col-md-3 mb30">
@@ -339,7 +342,7 @@
                             <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3>Юлия Чучалина</h3>
+                        <h3><font color="#001B0D">Юлия Чучалина</font></h3>
                         <span class="subtitle"></span>
                     </div>
                 </div>
