--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 дизайнер
                                 </span>
                             </a>
-                            <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
+                            <img src="images/team/1.jpg" class="img-responsive" alt="">
                         </figure>
 
                         <h3><font color="#001B0D">Дарья Масленникова</font></h3>
@@ -308,7 +308,7 @@
 копирайтер 
                                 </span>
                             </a>
-                            <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
+                            <img src="images/team/1.jpg" class="img-responsive" alt="">
                         </figure>
 
                         <h3><font color="#001B0D">Данил Сурнин</font></h3>
@@ -324,7 +324,7 @@
                                     <span>Фотограф
                                 </span>
                             </a>
-                            <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
+                            <img src="images/team/Настя.png" class="img-responsive" alt="">
                         </figure>
 
                         <h3><font color="#001B0D">Анастасия Ложкина</font></h3>
@@ -339,7 +339,7 @@
                                     <span>Фотограф
                                 </span>
                             </a>
-                            <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
+                            <img src="images/team/Юля.png" class="img-responsive" alt="">
                         </figure>
 
                         <h3><font color="#001B0D">Юлия Чучалина</font></h3>
