--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
 
-                        <h2 class="wow fadeInUp">Архив</h2>
+                        <h2 class="wow fadeInUp">С Днем защитника Отечества</h2>
                         <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                     </div>
 
@@ -224,43 +224,34 @@
                             </a></div>
 
                         <div class="clearfix"></div>
-                        <div class="text-center"><a
-                                href="https://istu.ru/news/obrazovanie/zimnyaya-shkola-pedagogicheskogo-masterstva"
-                                target="_blank">
+                        <div class="text-center">
                                 <h4>Зимняя школа педагогического мастерства 2020 «Педагогическая среда при обучении
                                     иностранным языкам в условиях интеграции в мировое информационно-образовательное
                                     пространство»</h4>
-                            </a></div>
-
+                        </div>
                         <div class="clearfix"></div>
-                        <div class="text-center"><a
-                                href="https://istu.ru/department/noc-innovacionnye-tehnologii-v-yazykovom-professionalnom-obrazovanii/page/213"
-                                target="_blank">
+                        <div class="text-center">
                                 <h4>IV Всероссийская Зимняя школа педагогического мастерства 2021 «Цифровизация
                                     языкового образования в условиях интеграции в мировое образовательное пространство»
                                     (21 января – 4 февраля 2021 г.)</h4>
-                            </a></div>
+                            </div>
 
                         <div class="clearfix"></div>
-                        <div class="text-center"><a
-                                href="https://istu.ru/news/zhizn-universiteta/vserossiyskaya-zimnyaya-shkola-pedagogicheskogo-masterstva-2022-kak-eto-bylo"
-                                target="_blank">
+                        <div class="text-center">
                                 <h4>V Всероссийская Зимняя школа педагогического мастерства с международным участием
                                     «Цифровизация языкового образования в условиях интеграции в мировое образовательное
                                     пространство» (26 января – 26 февраля 2022 г.)</h4>
-                            </a></div>
+                            </div>
 
                         <div class="clearfix"></div>
-                        <div class="text-center"><a
-                                href="https://iotistu.github.io/ws2023/report/"
-                                target="_blank">
+                        <div class="text-center">
                                 <h4>VI Всероссийская зимняя
                                     школа педагогического
                                     мастерства
                                     «Цифровизация высшего образования и языкового обучения
                                     в постковидную эпоху: тренды, требования и технологии»
                                     (с международным участием) (25 января – 27 февраля 2023 г.)</h4>
-                            </a></div>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -292,7 +283,9 @@
                             <img src="images/team/1.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3><font color="#001B0D">Дарья Масленникова</font></h3>
+                        <h3><font color="#001B0D"><a
+                                href="https://vk.com/mdaliil"
+                                target="_blank">Дарья Масленникова</a></font></h3>
                     </div>
 		</div>
 		<div class="col-md-3 mb30">    
