--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
                             <img src="images/team/1.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3><font color="#001B0D"><a
+                        <h3><a
                                 href="https://vk.com/mdaliil"
-                                target="_blank">Дарья Масленникова</a></font></h3>
+                                target="_blank"><font color="#001B0D">Дарья Масленникова</font></a></h3>
                     </div>
 		</div>
 		<div class="col-md-3 mb30">    
