--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@
                             <img src="images/team/1.jpg" class="img-responsive" alt="">
                         </figure>
 
-                        <h3><font color="#001B0D">Данил Сурнин</font></h3>
+                        <h3><a
+                                href="https://vk.com/surnin2001"
+                                target="_blank"><font color="#001B0D">Данил Сурнин</font></a></h3>
                         <span class="subtitle"></span>
                     </div>
 			</div>
@@ -320,7 +322,9 @@
                             <img src="images/team/Настя.png" class="img-responsive" alt="">
                         </figure>
 
-                        <h3><font color="#001B0D">Анастасия Ложкина</font></h3>
+                        <h3><a
+                                href="https://vk.com/ayt_sunnn"
+                                target="_blank"><font color="#001B0D">Анастасия Ложкина</font></a></h3>
                     </div>
 				  </div>
 		<div class="col-md-3 mb30">
@@ -335,7 +339,9 @@
                             <img src="images/team/Юля.png" class="img-responsive" alt="">
                         </figure>
 
-                        <h3><font color="#001B0D">Юлия Чучалина</font></h3>
+                        <h3><a
+                                href="https://vk.com/chujul"
+                                target="_blank"><font color="#001B0D">Юлия Чучалина</font></a></h3>
                         <span class="subtitle"></span>
                     </div>
                 </div>
