--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class="col-md-12 text-center">
 
                         <h2 class="wow fadeInUp">С Днем защитника Отечества</h2>
-                        <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
+                        <div class="small-border wow fadeInUp" data-wow-delay=".2s" style="background:#FFFFFF"></div>
                     </div>
 
                     <div class="schedule-item">
