--- a/index.html
+++ b/index.html
@@ -118,68 +118,22 @@
                             <h2 class="wow fadeInUp">Основные направления работы Зимней школы</h2>
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
-
-                        <div class="col-md-12 text-center wow fadeInLeft">
-                            <div class="padding20 sm-mb30">
-                                <div class="text-left">
-                                    <span class="subtitle2"><i class="icon-aperture mb10 size15 orange"></i> &nbsp;
-                                        проблемы и возможности цифровизации образования и языкового обучения</span>
-                                    <span class="subtitle2"><i class="icon-aperture mb10 size15 orange"></i> &nbsp;
-                                        новые подходы, концепции и технологии, обеспечивающие эффективность преподавания
-                                        иностранного языка в цифровых реалиях и в русле новых требований к
-                                        интернационализации образования</span>
-                                    <span class="subtitle2"><i class="icon-aperture mb10 size15 orange"></i> &nbsp;
-                                        технологические решения на основе искусственного интеллекта в обучении
-                                        иностранным языкам</span>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
             <!-- section close -->
+		
 
+		
     <!-- section begin СПИКЕРЫ -->
     <section id="section-speakers"  style="background:#FFFFFF">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <h2 class="wow fadeInUp">Спикеры</h2>
-                    <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
-                </div>
-                <div class="spacer-single"></div>
-                <div class="spacer-single"></div>
-		<div class="col-md-3 mb30">
-                    <div class="profile_pic text-center">
-                        <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
-                                Title="начальник отдела обучения в России образовательной корпорации Чжишан, учитель русского языка, г. Цзинань, провинция Шаньдун, Китай.
-Профессиональные интересы: преподавание РКИ, переводческая деятельность (китайский-русский)
-Бакалавриат, ННГУ; сертификат государственного тестирования по русскому языку 3-го уровня
-В 2013 г. – участие в качестве переводчика в Конференции по дружбе и сотрудничеству между руководством Нижнего Новгорода и Цзинаня.
-В 2014 г.:  1-ое место в конкурсе эссе на тему «Любимый праздник моей страны»  (Нижегородский государственный архитектурно-строительный университет).
-В 2015 г.–  Диплом Четвертого онлайн-фестиваля дружбы «Я другой такой страны не знаю», посвященного Году литературы (МГУ).
-В 2024 г.  – сотрудничество между Цилуским промышленным университетом и российским академиком Винокуровым В. А. по переговорам о газогидратах и других проектах, в качестве переводчика
-С 2023 г. – обучение в магистратуре ИжГТУ имени М.Т. Калашникова по направлению «Менеджмент».">
-                                <span class="overlay-v">
-                                    <span>начальник отдела обучения в России образовательной корпорации Чжишан, учитель русского языка, г. Цзинань, провинция Шаньдун, Китай.<br>
-Профессиональные интересы: преподавание РКИ, переводческая деятельность (китайский-русский)<br>
-Бакалавриат, ННГУ; сертификат государственного тестирования по русскому языку 3-го уровня<br>
-В 2013 г. – участие в качестве переводчика в Конференции по дружбе и сотрудничеству между руководством Нижнего Новгорода и Цзинаня.<br>
-В 2014 г. – 1-ое место в конкурсе эссе на тему «Любимый праздник моей страны»  (Нижегородский государственный архитектурно-строительный университет).
-<br>В 2015 г.–  Диплом Четвертого онлайн-фестиваля дружбы «Я другой такой страны не знаю», посвященного Году литературы (МГУ).
-<br>В 2024 г.  – сотрудничество между Цилуским промышленным университетом и российским академиком Винокуровым В. А. по переговорам о газогидратах и других проектах, в качестве переводчика
-<br>С 2023 г. – обучение в магистратуре ИжГТУ имени М.Т. Калашникова по направлению "Менеджмент".
-                                </span>
-                            </a>
-                            <img src="images/team/Weiwei.jpg" class="img-responsive" alt="">
-                        </figure>
-
-                        <h3>Чжан Вэйвэй</h3>
-                        <span class="subtitle"></span>
-                    </div>
-                </div>
-
+		<div>
+                <img src="Юля.jpg" style="float:left" width="100%">
+		<img src="Юля.jpg" style="float:left" width="50%">
+		<img src="Юля.jpg" style="float:left" width="50%">
+		</div>
             </div>
         </div>
     </section>
