--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="container">
             <div class="row">
 		<div>
-                <img src="Юля.jpg" style="float:left" width="100%">
-		<img src="Юля.jpg" style="float:left" width="50%">
-		<img src="Юля.jpg" style="float:left" width="50%">
+                <img src="Юля.png" style="float:left" width="100%">
+		<img src="Юля.png" style="float:left" width="50%">
+		<img src="Юля.png" style="float:left" width="50%">
 		</div>
             </div>
         </div>
