--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="container">
             <div class="row">
 		<div>
-                <img src="Юля.png" style="float:left" width="100%">
-		<img src="Юля.png" style="float:left" width="50%">
-		<img src="Юля.png" style="float:left" width="50%">
+                <img src="images/team/Настя.png" style="float:left" width="100%">
+		<img src="images/team/Настя.png" width="50%">
+		<img src="images/team/Настя.png" width="50%">
 		</div>
             </div>
         </div>
@@ -226,7 +226,7 @@
               <div class="col-md-3 mb30">
                     <div class="profile_pic text-center">
                         <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
+                            <a class="image-popup-vertical-fit" href="images/team/1.jpg"
                                 Title="Редактор проекта
 дизайнер">
                                 <span class="overlay-v">
@@ -245,7 +245,7 @@
 		<div class="col-md-3 mb30">    
 		       <div class="profile_pic text-center">
                         <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
+                            <a class="image-popup-vertical-fit" href="images/team/1.jpg"
                                 Title="Продюсер проекта
 верстальщик лендинга
 копирайтеп">
@@ -267,7 +267,7 @@
 			  <div class="col-md-3 mb30">
 		       <div class="profile_pic text-center">
                         <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
+                            <a class="image-popup-vertical-fit" href="images/team/Настя.png"
                                 Title="Фотограф">
                                 <span class="overlay-v">
                                     <span>Фотограф
@@ -284,7 +284,7 @@
 		<div class="col-md-3 mb30">
 		        <div class="profile_pic text-center">
                         <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/Weiwei.jpg"
+                            <a class="image-popup-vertical-fit" href="images/team/Юля.png"
                                 Title="Фотограф">
                                 <span class="overlay-v">
                                     <span>Фотограф
