--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
         <div class="container">
             <div class="row">
 		<div>
-                <img src="images/team/Настя.png" style="float:left" width="100%">
-		<img src="images/team/Настя.png" width="50%">
-		<img src="images/team/Настя.png" width="50%">
+                <img src="images/team/Настя.png" style="float:left" width="80%">
+		<div>
+		<img src="images/team/Настя.png" width="40%">
+		<img src="images/team/Настя.png" width="40%">
+		</div>
 		</div>
             </div>
         </div>
