--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <div class="col-md-3 mb30">
                     <div class="profile_pic text-center">
                         <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/1.jpg"
+                            <a class="image-popup-vertical-fit" href="images/team/Даша.png"
                                 Title="Редактор проекта
 дизайнер">
                                 <span class="overlay-v">
@@ -236,7 +236,7 @@
 дизайнер
                                 </span>
                             </a>
-                            <img src="images/team/1.jpg" class="img-responsive" alt="">
+                            <img src="images/team/Даша.png" class="img-responsive" alt="">
                         </figure>
 
                         <h3><a
@@ -247,7 +247,7 @@
 		<div class="col-md-3 mb30">    
 		       <div class="profile_pic text-center">
                         <figure class="picframe mb30">
-                            <a class="image-popup-vertical-fit" href="images/team/1.jpg"
+                            <a class="image-popup-vertical-fit" href="images/team/Данил.png"
                                 Title="Продюсер проекта
 верстальщик лендинга
 копирайтеп">
@@ -257,7 +257,7 @@
 копирайтер 
                                 </span>
                             </a>
-                            <img src="images/team/1.jpg" class="img-responsive" alt="">
+                            <img src="images/team/Данил.png" class="img-responsive" alt="">
                         </figure>
 
                         <h3><a
